<resources>
    <string name="app_name">PF_inter</string>
    <string name="titulo">Titulo</string>
    <string name="notas">NOTAS</string>
    <string name="logo">logo</string>
    <string name="bienvenid">BIENVENID@ :)</string>
    <string name="login">LOGIN</string>
    <string name="usuario">Usuario</string>
    <string name="constrase_a">Constraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="titulo_">Titulo</string>
    <string name="contenido">Contenido</string>
    <string name="guardar">Guardar</string>
    <string name="btelimnar">Eliminar</string>
    <string name="MenuInicio">Inicio</string>
    <string name="MenuEliminar">Eliminar</string>
    <string name="MenuAgregar">Agregar</string>
    <string name="title_activity_modificar">Modificar</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="modificar">Modificar</string>
    <string name="anterior">◀</string>
    <string name="siguiente">▶</string>
    <string name="selecciona_la_nota_que_quieras_eliminar">selecciona_la_nota_que_quieras_eliminar</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="bienvenido">BIENVENID@ :)</string>
    <string name="registro">Registro</string>
    <string name="contrasena">Contraseña</string>
    <string name="btnguardarusu">Guardar</string>
    <string name="btnguardarcontra">Guardar</string>
    <string name="registrarse">Registrarse</string>
    <string name="CambiarContrasena">Cambiar_Contraseña</string>
    <string name="registrarse_">Registrarse</string>


</resources>