<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item
        android:id="@+id/ITEliminar"
        android:title="@string/MenuEliminar"
        app:showAsAction="always"
        android:icon="@drawable/basurita" />

    <item
        android:id="@+id/ITAgregar"
        android:title="@string/MenuAgregar"
        app:showAsAction="always"
        android:icon="@drawable/agrega" />

    <item
        android:id="@+id/ITInicio"
        android:title="@string/MenuInicio"
        app:showAsAction="never" />

    <item
        android:id="@+id/ITModificar"
        android:title="@string/modificar"
        app:showAsAction="never" />

    <item
        android:id="@+id/ITCerrarSesion"
        android:title="@string/cerrar_sesi_n"
        app:showAsAction="never" />

</menu>