<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Inicio"
    android:background="@color/verde"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/contrasena_inicio"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:src="@drawable/salir"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>



    <ImageView
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contrasena"
        android:textSize="40sp"
        android:layout_marginTop="45dp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-condensed-medium"
        />
    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/usuario"
        android:textSize="30sp"
        android:background="@drawable/fondo_redondeado"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/etContraseña"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:hint="@string/constrase_a"
        android:textSize="30sp"
        android:background="@drawable/fondo_redondeado"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/btnAct_Cont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnguardarcontra"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/beige"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        />
    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:paddingTop="16dp"
        android:textSize="16sp" />



</LinearLayout>